# plwr

./: .gitignore  Cargo.toml  Cross.toml  README.md  plwr.greger  todo.md  wait-any.greger
.github/workflows/: ci.yml
playwright-rs-local/: .cargo_vcs_info.json  Cargo.toml  build.rs
playwright-rs-local/src/: error.rs
playwright-rs-local/src/server/: connection.rs
playwright-rs-local/tests/: browser_install_error_test.rs  playwright_version_test.rs
script/: install
skills/plwr/: SKILL.md
src/: client.rs  daemon.rs  main.rs  protocol.rs  pw_ext.rs
test/e2e/: _setup.txt  _teardown.txt  cdp.txt  check.txt  click-modifiers.txt  clipboard.txt  complex-selectors.txt  computed-style.txt  console.txt  cookie.txt  dblclick.txt  dialog.txt  errors.txt  eval.txt  focus-blur.txt  header.txt  hover.txt  inner-html.txt  input-files.txt  input-value.txt  interaction.txt  navigation.txt  network.txt  screenshot.txt  scroll.txt  select.txt  selectors.txt  tree.txt  type.txt  video.txt  viewport.txt  wait-any-all.txt  wait-visibility.txt
test/e2e/fixture/: console.html  dialog.html  echo-headers.html  form.html  index.html  manifest.json  network.css  network.html  network.js  selectors.html  tree.html
