[package]
name = "plwr"
description = "Clean CLI for Playwright browser automation with CSS selectors"
version = "0.2.0"
edition = "2021"
authors = ["Andreas Jansson"]
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
playwright-rs = "0.8.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
libc = "0.2"
tempfile = "3.25.0"
openssl = { version = "0.10", features = ["vendored"], optional = true }

[features]
vendored-openssl = ["openssl"]

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
