[package]
name = "plwr"
description = "Clean CLI for Playwright browser automation with CSS selectors"
version = "0.5.0"
edition = "2021"
authors = ["Andreas Jansson"]
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
playwright-rs = { path = "playwright-rs-local" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
libc = "0.2"

openssl = { version = "0.10", features = ["vendored"], optional = true }
dirs = "6.0.0"

[features]
vendored-openssl = ["openssl"]

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
