[package]
name = "plwr"
description = "Playwright CLI for browser automation using CSS selectors."
version = "0.9.0"
edition = "2021"
authors = ["Andreas Jansson"]
license = "MIT"
repository = "https://github.com/andreasjansson/plwr"
homepage = "https://github.com/andreasjansson/plwr"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
playwright-rs = "0.8.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tempfile = "3"
libc = "0.2"

openssl = { version = "0.10", features = ["vendored"], optional = true }
dirs = "6.0.0"

[features]
vendored-openssl = ["openssl"]

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
